--- a/troll.html
+++ b/troll.html
@@ -26,10 +26,10 @@
 <pre style="font: 14px/13px monospace; color: white; text-align: center;">chromeos is ass</pre>
 <br>
 <div class="row">
-<a href="https://lolmets.bluehattergta.repl.co/" class="menu">[Home]</a>
-<a href="https://lolmets.bluehattergta.repl.co/troll.html" class="menu">[unblock]</a>
+<a href="https://yandhi.lol/" class="menu">[Home]</a>
+<a href="https://yandhi.lol/troll.html" class="menu">[unblock]</a>
 <a href="https://myrient.erista.me//ftp/" class="menu">[other unblockers]</a>
-<a href="https://lolmets.bluehattergta.repl.co/login.html" class="menu">[dev log in]</a>
+<a href="https://yandhi.lol/login.html" class="menu">[dev log in]</a>
 <a href="https://myrient.erista.me//donate/" class="menu">[bookmarklets]</a>
 </div>
 <br>
